# browser-agent

./: .env  IMPLEMENTATION_PLAN.md  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/docs/: api.md  architecture.md
backend/scripts/: run_task.py  seed_memory.py  test_qa_api_ws.py  test_qa_tools_live.py  test_ws_client.py  verify_phase1.py  verify_phases.py
backend/src/: __init__.py  config.py  main.py
backend/src/agent/: core.py  llm.py  planner.py  prompts.py  tools.py  watchdog.py
backend/src/api/: __init__.py  routes_config.py  routes_tasks.py  routes_vault.py  routes_ws.py  task_store.py  ws.py
backend/src/memory/: __init__.py  sqlite_store.py  vault.py  vector_store.py
backend/src/models/: agent_event.py  config.py  task.py  vault.py
backend/src/safety/: __init__.py  audit.py  domain_filter.py  hitl.py
backend/src/utils/: logging.py
backend/tests/: conftest.py  test_agent_core.py  test_api_tasks.py  test_llm.py  test_memory.py  test_models.py  test_safety.py  test_ws.py
extension/: package.json  tsconfig.json  vite.config.ts
extension/scripts/: gen_icons.py
extension/src/: globals.css
extension/src/background/: service-worker.ts
extension/src/command-palette/: CommandPalette.tsx  QuickActions.tsx  TaskInput.tsx
extension/src/components/: Button.tsx  ConfirmDialog.tsx  Spinner.tsx
extension/src/content/: context-extractor.ts  highlight-overlay.ts  index.tsx
extension/src/hooks/: useTabContext.ts  useTaskApi.ts  useWebSocket.ts
extension/src/lib/: api.ts  storage.ts  ws.ts
(+11 files in other folders)
